WEBP-33: default logo dimensions to avoid jumping
WEBP-33 (Serve theming information)

--- a/ui/css/variables/theme.css
+++ b/ui/css/variables/theme.css
@@ -3,6 +3,10 @@
   --theme-header-background-color: var(--knime-masala);
   --theme-header-foreground-color: var(--knime-white);
 
+  /* Logo */
+  --theme-logo-width: 131px;
+  --theme-logo-height: 34px;
+
   /* Headlines */
   --theme-headlines-font-family: 'Roboto, sans-serif';
   --theme-headlines-font-color: var(--knime-masala);
